--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,6 @@
 name: Automated Tests
 
-on: pull_request
+on: [push, pull_request]
 
 jobs: 
   jest:
@@ -15,4 +15,4 @@ jobs:
       
       - run: npm ci
 
-      - run: npm run test
+      - run: npm test
